--- a/lib/bookTrading_web/templates/user_book/new.html.eex
+++ b/lib/bookTrading_web/templates/user_book/new.html.eex
@@ -1,5 +1,5 @@
 <h1>Edit User1</h1>
 
-<%= render "form.html", Map.put(assigns, :action, Routes.user_book_path(@conn, :create, @book)) %>
+<%= render "form.html", Map.put(assigns, :action, Routes.user_book_path(@conn, :create)) %>
 
 <span><%= link "Back", to: Routes.user_book_path(@conn, :index) %></span>
