add book transaction, refactor path

--- a/lib/bookTrading_web/templates/book/index.html.eex
+++ b/lib/bookTrading_web/templates/book/index.html.eex
@@ -1,7 +1,7 @@
 <section class="section">
   <div class='rows'>
     <div class="row">
-      <span class="is-pulled-right"><%= link "New Book", to: Routes.user_book_path(@conn, :new) %></span>
+      <span class="is-pulled-right"><%= link "New Book", to: Routes.book_path(@conn, :new) %></span>
     </div>
     <div class="row">
       <h3 class="title is-3">Listing Books</h3>
@@ -24,9 +24,9 @@
               <td><%= book.description %></td>
               <td>
                 <div class="buttons">
-                  <%= link "Show", to: Routes.user_book_path(@conn, :show, book), class: "button is-small is-link" %>
-                  <%= link "Edit", to: Routes.user_book_path(@conn, :edit, book), class: "button is-small is-link" %>
-                  <%= link "Delete", to: Routes.user_book_path(@conn, :delete, book), method: :delete, data: [confirm: "Are you sure?"], class: "button is-danger is-small is-link" %>
+                  <%= link "Show", to: Routes.book_path(@conn, :show, book), class: "button is-small is-link" %>
+                  <%= link "Edit", to: Routes.book_path(@conn, :edit, book), class: "button is-small is-link" %>
+                  <%= link "Delete", to: Routes.book_path(@conn, :delete, book), method: :delete, data: [confirm: "Are you sure?"], class: "button is-danger is-small is-link" %>
                 </div>
               </td>
             </tr>
