--- a/lib/bookTrading_web/templates/book/show.html.eex
+++ b/lib/bookTrading_web/templates/book/show.html.eex
@@ -13,5 +13,5 @@
     <img src="<%= get_image_thumb(@book.cover_url,@book) %>" />
   </li>
 </ul>
-<span><%= link "Edit", to: Routes.user_book_path(@conn, :edit, @book) %></span>
-<span><%= link "Back", to: Routes.user_book_path(@conn, :index) %></span>
+<span><%= link "Edit", to: Routes.book_path(@conn, :edit, @book) %></span>
+<span><%= link "Back", to: Routes.book_path(@conn, :index) %></span>
