--- a/lib/bookTrading_web/templates/layout/app.html.eex
+++ b/lib/bookTrading_web/templates/layout/app.html.eex
@@ -14,6 +14,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css"
     />
       <link rel="stylesheet" href='<%= Routes.static_path(@conn, "/css/app.css") %>'/>
+     
+       
     </head>
     <body>
       <div id="main-layout">
@@ -33,6 +35,7 @@
               <%= if @current_user do %>
                 <div class="buttons">
                   <%= link "Books", to: Routes.book_path(@conn, :index), class: " is-small navbar-item" %>
+                  <%= link "My Books", to: Routes.user_path(@conn, :index), class: " is-small navbar-item" %>
                   <%= link "Transactions", to: Routes.transaction_path(@conn, :index), class: " is-small navbar-item" %>
                 </div>
               <% end %>
@@ -74,6 +77,8 @@
           </p>
         </div>
       </footer>
-      <script type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
+      
+       <script type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
+       
     </body>
   </html>
